syntax='proto3';

option java_multiple_files = true;
option java_package = "score";

service ScoreService{
  rpc CreateScoreAccount(ScoreRequest) returns (ScoreResponse);
}

message Answer {
  string questionId = 1;
  string chosenOptionId = 2;
}

message ScoreRequest {
  string userId = 1;               // propagate from JWT
  string paperId = 2;              // id of the quiz paper/session
  string paperToken = 3;           // signed token with correct answers + expiry
  repeated Answer answers = 4;     // submitted answers
}

message QuestionResult {
  string questionId = 1;
  bool correct = 2;
  int32 pointsAwarded = 3;
  int32 maxPoints = 4;
}

message ScoreResponse {
  int32 totalScore = 1;
  int32 maxScore = 2;
  repeated QuestionResult results = 3;
  string boardKey = 4;             // e.g., "science:easy" for leaderboards
}
